# rust-quotekeeper

./: .gitignore  Cargo.toml  README.md  test.db
src/: main.rs  query.rs  quote.rs
static/: script.js  style.css
templates/: index.html.tera  index.tera  submitquote.html  submitquote.html.tera
