[package]
name = "rust-quotes"
version = "0.1.0"
authors = ["Max Cohn <mxc1805@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
lazy_static = "1.3.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
rusqlite = "0.20.0"


[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["tera_templates", "serve"]