[package]
name = "rust-quotes"
version = "0.1.0"
authors = ["Max Cohn <mxc1805@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
rusqlite = "0.20.0"
actix-web = "1.0.8"
actix-files = "0.1.7"
rand = "0.7"
tera = "0.11.20"
